--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,6 @@
     <string name="picture">照片</string>
 
     <string name="please_input_your_name">请输入您的名字</string>
+    
+    <string name="new_friend">新的朋友</string>
 </resources>
