--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="title_set_email">请设置账户保护电子邮箱</string>
     <string name="set_email">请输入您的电子邮箱</string>
     <string name="set_email2">再次确认您的电子邮箱</string>
-    <string name="set_email_failed">设置电子邮箱失败，请检查网络!</string>
+    <string name="set_email_failed">设置电子邮箱失败!</string>
     <string name="set_email_not_same">两次输入的电子邮箱不一致!</string>
     <string name="email_invalid">请输入正确的电子邮箱!</string>
     <string name="cancel">取消</string>
@@ -37,6 +37,8 @@
     <string name="complete_profile_tip_2">预计将耗时1分钟时间</string>
     <string name="set_avatar">请选择您的头像</string>
     <string name="set_faceurl">选择头像</string>
+    <string name="preview_profile">预览</string>
+    <string name="send_message">发消息</string>
     <string name="name">昵称</string>
     <string name="gender">性别</string>
     <string name="male">男</string>
