--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,4 +171,9 @@
     <string name="transfer_risk_tip_3">2.如果是通过网络购买虚拟物品，请确认你是否已收到虚拟物品。如果是先付款，请确认交易是否安全。</string>
     <string name="transfer_risk_tip_4">3.请确认对方是否冒充政府机构、执法机构向你进行钓鱼攻击。政府和执法机构不会使用Freechat向你索取费用。</string>
     <string name="i_read_and_know">我已确认并知晓</string>
+
+    <string name="wallet_password">钱包密码</string>
+    <string name="wallet_password_hint">请输入您的钱包密码</string>
+    <string name="forget_password">忘记密码</string>
+    <string name="wrong_password">密码错误</string>
 </resources>
