--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="me">我</string>
 
     <string name="wallet">钱包</string>
+    <string name="help">帮助</string>
+    <string name="setting">设置</string>
 
     <string name="transfer">转账</string>
     <string name="receive_account">接受账户</string>
@@ -176,4 +178,23 @@
     <string name="wallet_password_hint">请输入您的钱包密码</string>
     <string name="forget_password">忘记密码</string>
     <string name="wrong_password">密码错误</string>
+
+    <string name="verify_email">验证%s邮箱收到的验证码</string>
+    <string name="verify_email_tip">电子邮箱是确认您Freechat身份的唯一方式，保护您的社交信息。</string>
+
+    <string name="account_security">账号与安全</string>
+    <string name="language_setting">语言设置</string>
+    <string name="clear_cache">清除缓存</string>
+    <string name="version">版本</string>
+    <string name="logout">退出登录</string>
+
+    <string name="account">账户</string>
+    <string name="backup_mnemonic">备份助记词</string>
+    <string name="change_password">修改密码</string>
+    <string name="email">邮箱</string>
+
+    <string name="old_password">原密码</string>
+    <string name="new_password">新密码</string>
+    <string name="confirm_again">再次确认</string>
+    <string name="confirm_password_fit">确保您的密码有大写字母、小写字母等，位数大于8位。</string>
 </resources>
