--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,4 +202,6 @@
     <string name="english">English</string>
 
     <string name="reset">重置</string>
+    <string name="cache">缓存</string>
+    <string name="cache_tip">缓存是使用过程中产生的临时数据，清理缓存不会影响您的正常使用</string>
 </resources>
