--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="gender">性别</string>
     <string name="male">男</string>
     <string name="female">女</string>
+    <string name="transgender">跨性别</string>
     <string name="birthday">生日</string>
     <string name="country">国家</string>
     <string name="region">地区</string>
