--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="complete_profile_tip_2">预计将耗时1分钟时间</string>
     <string name="set_avatar">请选择您的头像</string>
     <string name="set_faceurl">选择头像</string>
+    <string name="faceurl">头像</string>
     <string name="preview_profile">预览</string>
     <string name="send_message">发消息</string>
     <string name="name">昵称</string>
